czmq___includedir = $(includedir)/czmq++
czmq___include_HEADERS = \
    czmq.hpp \
    assert.hpp \
    authenticator.hpp \
    certificate.hpp \
    context.hpp \
    message.hpp \
    poller.hpp \
    socket.hpp \
    socket_opt.hpp \
    thread.hpp

czmq___impl_includedir = $(includedir)/czmq++/impl
czmq___impl_include_HEADERS = \
    impl/poller.ipp

